--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -11,9 +11,14 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - uses: actions/checkout@v3
+      - name: Extract version from pom.xml
+        run: echo "::set-output name=version::$(grep -oP '<version>\K[^<]+' pom.xml)"
+
+      - name: Display extracted version
+        run: echo "Extracted version = ${{ steps.extract_version.outputs.version }}"
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
