--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Extract version from pom.xml
-        run: echo "::set-output name=version::$(grep -oP '<version>\K[^<]+' pom.xml)"
+        run: echo "{version}={$(grep -oP '<version>\K[^<]+' pom.xml)}" >> $GITHUB_OUTPUT
 
       - name: Display extracted version
         run: echo "Extracted version = ${{ steps.extract_version.outputs.version }}"
