--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Extract version from pom.xml
-        run: echo "version=$(grep -oP '<version>\K[^<]+' pom.xml)" >> $GITHUB_OUTPUT
+        run: echo "version=$(grep -oP '<version>\K[^<]+' pom.xml | tr -d '[:space:]')" >> $GITHUB_OUTPUT
 
       - name: Display extracted version
         run: cat $GITHUB_OUTPUT
