--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -14,11 +14,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Extract version from pom.xml
-        run: echo "version=$(grep -oP '<version>\K[^<]+' pom.xml)" >> $GITHUB_ENV
+        run: echo "version=$(grep -oP '<version>\K[^<]+' pom.xml | tr -d '[:space:]')" >> $GITHUB_ENV
 
       - name: Display extracted version
         run: echo "The output is ${{ env.version }}"
-
 
 
 
