--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -13,11 +13,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Extract version from pom.xml
-        run: echo "version=$(grep -oP '<version>\K[^<]+' pom.xml | tr -d '[:space:]')" >> $GITHUB_ENV
-
-      - name: Display extracted version
-        run: echo "The output is ${{ env.version }}"
 
 
 
@@ -29,6 +24,13 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn clean package
+
+      - name: Extract version from pom.xml
+        run: echo "APP_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
+
+      - name: Display extracted version
+        run: echo "The version is ${{ env.APP_VERSION }}"
+
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
