--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -13,9 +13,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-
-
-
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -27,10 +24,6 @@ jobs:
 
       - name: Extract version from pom.xml
         run: echo "APP_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
-
-      - name: Display extracted version
-        run: echo "The version is ${{ env.APP_VERSION }}"
-
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -46,4 +39,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: marteaupickeur/demo-docker-push:latest
+          tags: marteaupickeur/demo-docker-push:${{ env.APP_VERSION }}
